FIX: Fixed header bar problem on small screen

--- a/dev/src/scss/theme/_style.scss
+++ b/dev/src/scss/theme/_style.scss
@@ -68,16 +68,20 @@ img {
 //*-----------------------------------------
 #at_header {
 	background: $header_background_color;
-	box-shadow: 0 2px 5px rgba(0,0,0,0.26);
-	left: 0;
-	right: 0;
-	z-index: 1;
-	position: fixed;
-	opacity: 0.9;
+	@media #{$large-only} {
+		box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+		left: 0;
+		right: 0;
+		z-index: 1;
+		position: fixed;
+		opacity: 0.9;
+	}
 	.top-bar, .top-bar-section ul {
 		background: transparent;
 	}
 }
+
+
 
 //*-----------------------------------------
 //* Icon Menu Navigation
@@ -127,7 +131,15 @@ ul.off-canvas-list {
 	background: rgba(255, 255, 255, 0.2);
 	border: 1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 3px;
-	position: fixed;
+	@media #{$large-only} {
+		position: fixed;
+	}
+	@media #{$small-only} {
+		position: absolute;
+	}
+	@media #{$medium-only} {
+		position: absolute;
+	}
     padding: 5px 12px;
     top: 8px;
     left: 8px;
@@ -149,6 +161,7 @@ ul.off-canvas-list {
 			@media #{$small-only} {
 				width: 100%;
 				margin: 1rem auto;
+				margin-top: 143px;
 			}
 		}
 	}
